--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-svg": "^13.13.0",
     "react-native-vector-icons": "^10.0.0",
+    "react-redux": "^8.1.2",
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
